Fixed slider overlay  text wrapping

--- a/www/sites/all/themes/immoklink_base/css/gallery/screen.css
+++ b/www/sites/all/themes/immoklink_base/css/gallery/screen.css
@@ -964,7 +964,7 @@ nav.sub-nav {
     list-style-image: none;
     list-style-type: none;
     margin-left: 0;
-    white-space: nowrap;
+    white-space: normal;
     float: left;
     padding-left: 4px;
     padding-right: 4px;
